--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-reote_user = matthew
+remote_user = matthew
 private_key_file = ~/.ssh/id_rsa
 
 [privilege_escalation]
